--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,7 +6,7 @@
 
     <div class="form-group">
       <%= f.label :サービス名 %>
-      <%= f.text_field :name, class: "form-control", placeholder:"サービス名を入力してください。(100字以内)", autocomplete:"off" %>
+      <%= f.text_field :name, class: "form-control", placeholder:"サービス名を入力してください。(50字以内)", autocomplete:"off" %>
     </div>
     
     <div class="form-group">
@@ -34,11 +34,17 @@
       <%= f.text_area :point, class: "form-control" %>
     </div>
 
-    <div class="form-group">
+    <div class="form-group expect">
       <%= f.label :タグ（複数つける場合はスペースキーで区切ってください。） %>
-      <%= f.text_field :tag_list, class: "form-control", value: @post.tag_list.join(','), autocomplete:"off", id:"tags"  %>
+      <%= f.text_field :tag_list, class: "form-control", value: @post.tag_list.join(','), autocomplete:"off", id:"tags" %>
     </div>
-
-    <%= f.submit "更新する", class:"btn btn-primary btn-block" %>
+    <div class="btn-container">
+      <%= f.submit "更新する", class:"btn-base devise-btn" %>
+    </div>
+    <div class="back">
+      <%= link_to :back do %>
+        <i class="fas fa-undo"></i> 戻る
+      <% end %>
+    </div>
   <% end %>
 </div>
