--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -1,45 +1,46 @@
-<ul class="flex flame">
+<div class="posts-box">
   <% @posts.order(:created_at).each do |post| %>
-    <li class="post-list flame">
-      <div class="post-image">
-        <% if post.image? %>
-          <%= image_tag post.image.url %>
-        <% else %>
-          <%= image_tag asset_path("default_post.jpg") %>
+    <div class="posts-item flame">
+      <div class="item-image">
+        <%= link_to post_path(post) do %>
+          <% if post.image? %>
+            <%= image_tag post.image.url %>
+          <% else %>
+            <%= image_tag asset_path("default_post.jpg") %>
+          <% end %>
         <% end %>
       </div>
-      <div class="post-caption">
-        <h3 class="post-title">
-          <%= link_to post.name, post_path(post) %>
-        </h3>
-        <div class="post-box">
-          <div class="post-box2">
-            <p class="post-image">
-              <% if post.user.user_image? %>
-                <%= image_tag post.user.user_image.url %>
-              <% else %>
-                <%= image_tag asset_path("default_user.png") %>
-              <% end %>
-            </p>
-            <p class="post-name">
-              <%= link_to post.user.name, user_path(post.user) %>
-              <% unless post.user.uid.nil? %>
-                <i class="fab fa-twitter"></i>
-              <% end %>
-            </p>
-            <p class="post-tag">
-              <% post.tag_counts_on(:tags).each do |tag| %>
-                <%= link_to "#{tag.name}(#{tag.taggings_count})", posts_path(tag: tag.name), class:"label label-primary" %>
-              <% end %>
-            </p>
-          </div>
-        </div>
-        <p class="post-content">サービス概要</p>
-        <p><%= post.content.truncate(65) %></p>
-        <p class="post-time">
-          <%= time_ago_in_words(post.created_at) %>前に投稿
-        </p>
+      <div class="item-time">
+        <%= post.created_at.to_s(:datetime_jp) %>
       </div>
-    </li>
+      <div class="item-info">
+        <div class="item-name">
+          <%= post.name.truncate(40) %>
+        </div>
+        <div class="item-content">
+          <%= post.content.truncate(80) %>
+        </div>
+        <p class=""><%= link_to "詳細をみる", post_path(post) %></p>
+      </div>
+      <hr>
+      <div class="item-username">
+        <% if post.user.user_image? %>
+          <div><%= image_tag post.user.user_image.url %></div>
+        <% else %>
+          <div><%= image_tag asset_path("default_user.png") %></div>
+        <% end %>
+        <p><%= link_to post.user.name, user_path(post.user) %></p> 
+      </div>
+      <hr>
+      <div class="item-tag">
+        <% if post.tags.present? %>
+            <% post.tag_counts_on(:tags).each do |tag| %>
+              <%= link_to tag.name, posts_path(tag: tag.name), class:"tag-search" %>
+            <% end %>
+        <% else %>
+          <p>付与されているタグはありません。</p>
+        <% end %>
+      </div>
+    </div>
   <% end %>
-  </ul>
+</div>
