--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -45,13 +45,13 @@
     </div>
 
     <div class="actions btn-container">
-      <%= f.submit "登録する" ,class:"btn-base"%>
+      <%= f.submit "登録する" ,class:"btn-base devise-btn"%>
     </div>
   <% end %>
 
   <div class="sub">
     <div class="twitter-login">
-      <%= link_to user_twitter_omniauth_authorize_path do %>
+      <%= link_to user_twitter_omniauth_authorize_path, method: :post do %>
         <i class="fab fa-twitter"></i>Twitterで登録する
       <% end %>
     </div>
