投稿詳細部分を修正 #44

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -62,7 +62,7 @@
         <dd><%= simple_format(@post.point) %></dd>
       </dl>
       <div class="post-show-link">
-        <%= link_to @post.url, target:"_blank" do %>
+        <%= link_to @post.url, target:"_blank", class:"expect" do %>
           <i class="fas fa-link"></i>  ポートフォリオを閲覧する
         <% end %>     
       </div>
