--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 </div>
 <h2>最新作品一覧</h2>
-<hr>
+<hr style="border: 1px solid #ddd; margin-bottom: 50px;">
 <div>
   <%= render "shared/posts" %>
 </div>
