--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <h1>投稿する</h1>
 <h4>あなたが作成したポートフォリオを投稿し、ユーザーに共有します。</h4>
 
-<div class="sub flame">
+<div class="sub1 flame">
 <%= form_with(model: @post, local: true) do |f| %>
   <%= render 'shared/error_messages', model: f.object %>
   
@@ -44,6 +44,11 @@
     <%= f.submit "投稿する", class:"btn-base devise-btn" %>
   </div>
 <% end %>
+  <div class="back">
+    <%= link_to :back do %>
+      <i class="fas fa-undo"></i> 戻る
+    <% end %>
+  </div>
 </div>
 
 
