--- a/app/views/users/_stats.html.erb
+++ b/app/views/users/_stats.html.erb
@@ -1,10 +1,10 @@
-<div class="follower">
-    <%= link_to followers_user_path(@user.id) do %>
-      <h5 style="color: black;">フォロワー<strong id="follower"><%= @user.followers.count %></strong>人</h5>
-    <% end %>
-  </div>
-<div class="follow">
+<div class="follow layout">
   <%= link_to following_user_path(@user.id) do %>
-    <h5 style="color: black;">フォロー<%= @user.following.count %>人</h5>
+    <strong id="follow"><%= @user.following.count %></strong> フォロー中
+  <% end %>
+</div>
+<div class="follower layout">
+  <%= link_to followers_user_path(@user.id) do %>
+    <strong id="follower"><%= @user.followers.count %></strong> フォロワー
   <% end %>
 </div>
