--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,3 +1,22 @@
+<h1><%= @word %>一覧</h1>
+<div class="sub1 rela-container">
 <% @users.each do |user| %>
-  <%= link_to user.name, user_path(user) %>
+  <ul>
+    <li class="rela-image">
+      <% if user.user_image? %>
+        <%= image_tag user.user_image.url %>
+      <% else %>
+        <%= image_tag asset_path("default_user.png") %>
+      <% end %>
+    </li>
+    <li class="rela-username">
+      <%= link_to user.name, user_path(user) %>
+    </li>
+  </ul>
 <% end %>
+</div> 
+<div class="back">
+  <%= link_to :back do %>
+    <i class="fas fa-undo"></i> 戻る
+  <% end %>
+</div>
