--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @post.name %></h1>
 
-<div class="sub flame">
+<div class="sub1 flame">
   <%= form_with(model: @post, local: true) do |f| %>
     <%= render "shared/error_messages", model: f.object %>
 
