--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 @import "bootstrap";
 
 
-// --------  ページ全体  --------------------------------------------------
+// --------  ページ全体  -------------------------------------------------
 *{
  margin: 0;
  padding: 0;
@@ -137,7 +137,7 @@ h4{
 
 
 
-// --------  ヘッダー  ----------------------------------------------------
+// --------  ヘッダー  ---------------------------------------------------
 header{
   display: flex;
   align-items: center;
@@ -175,6 +175,13 @@ header{
   }
   div{
     padding: 0 12px;
+    img{
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.8);
+    }
   }
 }
 
@@ -227,10 +234,6 @@ header{
   margin-right: 10px;
 }
 
-
-// .navbar{
-//  background-color: #5472cd;
-// }
 
 .btn-block{
  margin-top: 15px;
@@ -292,7 +295,7 @@ header{
 }
 
 
-// --------  フッター  ----------------------------------------------------
+// --------  フッター  ---------------------------------------------------
 footer{
  background-color: #5472cd;
  height: 70px;
@@ -304,7 +307,7 @@ footer{
 }
 
 
-// --------  ホーム画面  --------------------------------------------------
+// --------  ホーム画面  -------------------------------------------------
 .home-container{
  height: 500px;
  display: flex;
@@ -334,7 +337,7 @@ footer{
 }
 
 
-// --------  利用規約  ----------------------------------------------------
+// --------  利用規約  ---------------------------------------------------
 .term-title{
  font-weight: 700;
  font-size: 25px;
@@ -351,7 +354,7 @@ footer{
 }
 
 
-// --------  ユーザー新規登録 ログイン  -----------------------------------
+// --------  ユーザー新規登録 ログイン  ----------------------------------
 .twitter-login{
   background-color: rgb(240, 246, 250);
   border: 1px solid rgb(29, 161, 242);
@@ -437,7 +440,7 @@ footer{
 }
 
 
-// --------  利用方法  ----------------------------------------------------
+// --------  利用方法  ---------------------------------------------------
 .how-to-use{
   margin-bottom: 30px;
   border-bottom: 1px solid #ccc;
@@ -476,7 +479,7 @@ footer{
 
 
 
-// --------  ユーザー編集  ------------------------------------------------
+// --------  ユーザー編集  -----------------------------------------------
 .delete-user{
   width: 40%;
   margin: 5px auto;
@@ -605,10 +608,14 @@ footer{
 
 // --------  フォロー一覧  -----------------------------------------------
 .rela-container{
+  hr{
+    border: 1px solid #eee;
+    margin: 0;
+  }
   ul{
     color: #000;
     display: flex;
-    border-top: 1px solid #ddd;
+    // border-top: 1px solid #ddd;
     .rela-image{
       margin: auto 0;
       img{
@@ -639,56 +646,6 @@ footer{
     }
   }
 }
-
-
-
-
-// .user-show-profile{
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   h2{
-//     font-weight: 700;
-//     font-size: 40px;
-//   }
-//   .sns-container{
-//     display: flex;
-//   }
-
-//   .fa-twitter-square{
-//     font-size: 40px;
-//     color: rgb(29, 161, 242);
-//     margin: 10px;
-//   }
-  
-//   .fa-twitter-square:hover{
-//     color: rgb(32, 117, 170);
-//     transition: 0.5s;
-//   }
-//   .fa-github-square{
-//     font-size: 40px;
-//     color: #5f5d60;
-//     margin: 10px;
-//   }
-//   .fa-github-square:hover{
-//     color: #000;
-//     transition: 0.5s;
-//   }
-//   h3{
-//     text-align: center;
-//     margin-top: 60px;
-//     margin-bottom: 10px;
-//     font-weight: 700;
-//     font-size: 25px;
-//   }
-//   p{
-//     font-size: 30px;
-//     text-align: center;
-//     width: 50%;
-//     font-size: 15px;
-//     padding: 0px 20px;
-//   }
-// }
 
 
 // --------  新規投稿  ---------------------------------------------------
@@ -807,81 +764,6 @@ footer{
   content:"";
   width:32%;
  }
-
-// .post-list{
-//  display: flex;
-//  height: 350px;
-//  width: 600px;
-//  margin-top: 15px;
-//  margin-bottom: 15px;
-// }
-
-// .post-image{
-//  display: flex;
-//  align-items: center;
-//  margin-right: 10px;
-//  width: 280px;
-//  img{
-//    width: 100%;
-//    height: 230px;
-//   //  border: solid 1px #ddd;
-//    object-fit: cover;
-//  }
-// }
-
-// .post-caption{
-//  width: 310px;
- 
-//  .post-title {
-//    border-bottom: solid 3px #cce4ff;
-//    position: relative;
-//  }
- 
-//  .post-title:after {
-//    position: absolute;
-//    content: " ";
-//    display: block;
-//    border-bottom: solid 3px #5472cd;
-//    bottom: -3px;
-//    width: 20%;
-//    text-overflow: ellipsis;
-//  }
-
-//  .post-box{
-//    display: flex;
-//    .post-box2{
-//      display: flex;
-//      margin-right: 20px;
-//      margin-bottom: 10px;
-//      .post-image{
-//        width: 30px;
-//        height: 30px;
-//        margin-right: 5px;
-//        margin-bottom: 0px;
-//        img{
-//          width: 30px;
-//          height: 30px;
-//          border-radius: 50%;
-//        }
-//      }
-//      .post-name{
-//        margin-top: 5px;
-//        margin-bottom: 0px;
-//      }
-//    }
-//   }
-//   .post-time{
-//     margin-top: 5px;
-//     font-size: 15px;
-//     color: gray;
-//     float: right;
-//   }
-// }
-
-//  .post-content{
-//    border-bottom: solid 1px #5472cd;
-//    width: 85px;
-//  }
 
 
  // --------  投稿詳細  --------------------------------------------------
@@ -1066,7 +948,7 @@ footer{
  }
 
 
-// --------  タグ  --------------------------------------------------------
+// --------  タグ  -------------------------------------------------------
 .tag{
  display: block;
  float: left;
@@ -1076,7 +958,7 @@ footer{
 }
 
 
-// --------  コメント  ----------------------------------------------------
+// --------  コメント  ---------------------------------------------------
 .comment{
  display: flex;
  margin-top: 10px;
@@ -1121,7 +1003,7 @@ footer{
 }
 
 
-// --------  ページネーション  --------------------------------------------
+// --------  ページネーション  -------------------------------------------
 .pagination>li>a {          
  border: none;     
  color: #5472cd;   
@@ -1138,7 +1020,7 @@ footer{
 }
 
 
-// --------  問い合わせ  --------------------------------------------------
+// --------  問い合わせ  -------------------------------------------------
 .info1{
   text-align: center;
   font-size: 18px;
@@ -1151,7 +1033,41 @@ footer{
 }
 
 
-// --------  モーダル  ----------------------------------------------------
+// --------  通知  -------------------------------------------------------
+.noti-container{
+  display: flex;
+  a{
+    font-size: 1.1em;
+    font: 900;
+  }
+  a:hover{
+    text-decoration: none;
+    color: #0000ee;
+    transition: 0.5s;
+  }
+  hr{
+    border: 1px solid #eee;
+  }
+  .noti-image{
+    img{
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.8);
+    }
+  }
+  .noti-contents{
+    width: 100%;
+    margin-left: 20px;
+    .noti-time{
+      margin-top: 5px;
+    }
+  }
+}
+
+
+// --------  モーダル  ---------------------------------------------------
 
 .login-modal-wrapper, .signup-modal-wrapper {
   position: fixed;
