--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,7 +36,7 @@
         <% if @post.user == current_user %>
           <div class="post-show-edit">
               <%= link_to "編集", edit_post_path(@post), class:"btn-base post-edit-btn" %>
-              <%= link_to "削除", post_path(@post), method: :delete, class:"", data:{confirm:"ポートフォリオを参考にしていたユーザーが悲しみます。本当に削除しますか？"}, class:"btn-base post-edit-btn expect" %>
+              <%= link_to "削除", post_path(@post), method: :delete, data:{confirm:"ポートフォリオを参考にしていたユーザーが悲しみます。本当に削除しますか？"}, class:"btn-base post-edit-btn expect" %>
           </div>
         <% end %>
       </div>
