--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -56,7 +56,7 @@
 
   <div class="sub">
     <div class="delete-user">
-      <%= link_to "アカウントを削除", user_path(current_user), data: { confirm: "本当に削除しますか？" }, method: :delete %>
+      <%= link_to "アカウントを削除", user_path(current_user), data: { confirm: "本当に削除しますか？" }, method: :delete, class:"expect" %>
     </div>
     <div class="back">
       <%= link_to :back do %>
